--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "build": "tsc"
   },
   "dependencies": {
-    "discord.js": "12"
+    "dotenv": "^8.2.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/node": "^14.11.2",
+    "@types/winston": "^2.4.4",
     "typescript": "^4.0.3"
   }
 }
