--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "build": "tsc"
   },
   "dependencies": {
+    "cron": "^1.8.2",
     "discord.js": "^11.6.4",
     "dotenv": "^8.2.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/cron": "^1.7.2",
     "@types/node": "^14.11.2",
     "@types/winston": "^2.4.4",
     "typescript": "^4.0.3"
